--- a/projects/minescan/index.html
+++ b/projects/minescan/index.html
@@ -8,7 +8,7 @@
   <!-- Load OpenCV -->
   <script src="https://docs.opencv.org/4.7.0/opencv.js" async></script>
   <!-- Load JScanify from puffinsoft repo -->
-  <script src="https://cdn.jsdelivr.net/gh/puffinsoft/jscanify/dist/jscanify.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ColonelParrot/jscanify@master/src/jscanify.min.js"></script>
 
   <style>
     body {
